# RequestedMiner

./: .gitignore  CMakeLists.txt  ClassCreator.sh  Makefile  README.md
Data/: Pallet Town.tmx  Pallet Town_Up 0.csv  Pallet_Town_Down_0.csv  Pallet_Town_Down_1.csv  Pallet_Town_Up_1.csv  Route_1.tmx  Route_1_Down_0.csv  Route_1_Down_1.csv  Route_1_Up_0.csv  Route_1_Up_1.csv
src/: AnimatedEntity.cpp  AnimatedEntity.hpp  Animation.cpp  Animation.hpp  AnimationManager.cpp  Camera.cpp  Camera.hpp  Character.hpp  Controller.cpp  Controller.hpp  DirLook.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Game.cpp  Game.hpp  GameState.hpp  GameStateManager.cpp  GameStateManager.hpp  Logger.cpp  Logger.hpp  MainGameState.cpp  MainGameState.hpp  Map.cpp  Map.hpp  MapCharacter.cpp  MapCharacter.hpp  MapEntity.cpp  MapEntity.hpp  MapEntityManager.cpp  MapEvent.cpp  MapEvent.hpp  MapEventManager.cpp  MapEventManager.hpp  MapItem.cpp  MapPosFinder.cpp  NPC.cpp  NPC.hpp  PC.cpp  (+12 more)
src/Entity/: AnimationManager.hpp  Entity.hpp  EntityManager.cpp
src/Map/: Camera.cpp  Camera.hpp  Map.cpp  Map.hpp  MapCharacter.cpp  MapCharacter.hpp  MapEntity.cpp  MapEntity.hpp  MapEvent.hpp  MapEventManager.cpp  MapEventManager.hpp  MapItem.hpp  MapPosFinder.cpp  MapPosFinder.hpp  MapVectorPosition.cpp  MapVectorPosition.hpp  WorldTilesRetriever.cpp
src/Script/: Script.cpp  ScriptManager.cpp
src/States/: GameStateManager.cpp  GameStateManager.hpp  MainGameState.cpp  MainGameState.hpp
src/System/: Controller.cpp  Controller.hpp  Logger.cpp  Logger.hpp  TextureManager.cpp  (+4 more)
(+10 files in other folders)
